Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: Qt Creator 3.3.0-rc1
-
Fix Version/s: Qt Creator 3.3.0-rc1
-
Component/s: Widget Designer
-
Commits:de34e0e30b93eb9f245b668e2cf9513a7e6abd50
Description
1) Create QWidgets application, accept defaults.
2) Create new Designer form class (accept default, "Dialog with buttons bottom")
Now, even before the dialog is finished, I get debug output on the console:
Failed to parse: <ui version="4.0" >\n <author></author>\n <comment></comment>\n <exportmacro></exportmacro>\n <class>Dialog</class>\n <widget class="QDialog" name="Dialog" >\n <property name="geometry" >\n <rect>\n <x>0</x>\n <y>0</y>\n <width>400</width>\n <height>300</height>\n </rect>\n </property>\n <property name="windowTitle" >\n <string>Dialog</string>\n </property>\n <widget class="QDialogButtonBox" name="buttonBox" >\n <property name="geometry" >\n <rect>\n <x>30</x>\n <y>240</y>\n <width>341</width>\n <height>32</height>\n </rect>\n </property>\n <property name="orientation" >\n <enum>Qt::Horizontal</enum>\n </property>\n <property name="standardButtons" >\n <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>\n </property>\n </widget>\n </widget>\n <pixmapfunction></pixmapfunction>\n <resources/>\n <connections>\n <connection>\n <sender>buttonBox</sender>\n <signal>accepted()</signal>\n <receiver>Dialog</receiver>\n <slot>accept()</slot>\n <hints>\n <hint type="sourcelabel" >\n <x>248</x>\n <y>254</y>\n </hint>\n <hint type="destinationlabel" >\n <x>157</x>\n <y>274</y>\n </hint>\n </hints>\n </connection>\n <connection>\n <sender>buttonBox</sender>\n <signal>rejected()</signal>\n <receiver>Dialog</receiver>\n <slot>reject()</slot>\n <hints>\n <hint type="sourcelabel" >\n <x>316</x>\n <y>260</y>\n </hint>\n <hint type="destinationlabel" >\n <x>286</x>\n <y>274</y>\n </hint>\n </hints>\n </connection>\n </connections>\n</ui>\n
Attempts to compile fail with:
uic: Error in line 1, column 1595 : Extra content at end of document.
File '../untitled3/dialog.ui' is not valid
Note: The file really contains the string '\n' wherever a newline is supposed to be. That can't be right, can it?